[package]
name = "derive-from-one"
version = "0.1.0"
description = "Automatically generates `From` impls so you don't have to"
authors = ["Alex Fedoseev <alex@35mil.me>"]
readme = "README.md"
documentation = "https://docs.rs/derive-from-one"
repository = "https://github.com/alex35mil/derive-from-one"
keywords = ["derive", "trait", "from", "into"]
license = "MIT"
edition = "2021"
rust-version = "1.70"

[lib]
proc-macro = true

[dependencies]
quote = "1"
syn = { version = "2", features = ["extra-traits"] }
proc-macro2 = "1"

[dev-dependencies]
indoc = "1.0"
trybuild = "1.0"
